# ChangeLog for app-editors/emacs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2014; Ulrich Müller <ulm@gentoo.org> emacs-18.59-r9.ebuild:
  Remove old compatibility code.

*emacs-24.3-r2 (16 Mar 2014)
*emacs-23.4-r6 (16 Mar 2014)
*emacs-22.3-r10 (16 Mar 2014)
*emacs-21.4-r24 (16 Mar 2014)
*emacs-18.59-r9 (16 Mar 2014)

  16 Mar 2014; Ulrich Müller <ulm@gentoo.org> +emacs-18.59-r9.ebuild,
  +emacs-21.4-r24.ebuild, +emacs-22.3-r10.ebuild, +emacs-23.4-r6.ebuild,
  +emacs-24.3-r2.ebuild, +metadata.xml:
  Copied from Portage tree.
