@@ -130,6 +130,8 @@ src_install() {
 	for m in "${D}"/usr/share/man/man1/* ; do
 		mv "${m}" "${m%.1}-emacs-${SLOT}.1" || die "mv ${m} failed"
 	done
+	mv "${D}"/usr/share/man/man1/emacs{-emacs,}-${SLOT}.1 \
+		|| die "moving emacs man page failed"
 
 	# move info dir to avoid collisions with the dir file generated by portage
 	mv "${D}"/usr/share/info/emacs-${SLOT}/dir{,.orig} \
