@@ -159,6 +159,8 @@ src_install () {
 	for m in "${D}"/usr/share/man/man1/* ; do
 		mv "${m}" "${m%.1}-${EMACS_SUFFIX}.1" || die "mv man failed"
 	done
+	mv "${D}"/usr/share/man/man1/{emacs-,}${EMACS_SUFFIX}.1 \
+		|| die "moving emacs man page failed"
 
 	# move info dir to avoid collisions with the dir file generated by portage
 	mv "${D}"/usr/share/info/${EMACS_SUFFIX}/dir{,.orig} \
